blender crash on open recent file, when tracking is still in progress #39546

Closed
opened 2014-04-01 13:20:52 +02:00 by Alexander N. · 6 comments
Member

System Information
ubuntu 13.x x64 linux,

Blender Version
Broken: (official 2.70 ... 2.70 build 62dc18c717)

Short description of error
blender crashes, when i try to open the recent file, while tracking is still in progress

Exact steps for others to reproduce the error

  1. download the video from http://www.blenderguru.com/videos/introduction-to-camera-tracking/
  2. copy attached "Camera.blend" file to the same location where "Source Video.mp4" is.
  3. open that blend file
  4. press [ctrl]+T, to Track selected markers.
  5. while tracking is in progress: File > Open Recent... > "Camera.blend"
    blender crash.

Camera.blend
Camera.crash.txt
gdb-log.txt (includes backtrace)

**System Information** ubuntu 13.x x64 linux, **Blender Version** Broken: (official 2.70 ... 2.70 build 62dc18c717ea8c47c87e825b94a568486f93c452) **Short description of error** blender crashes, when i try to open the recent file, while tracking is still in progress **Exact steps for others to reproduce the error** 1. download the video from http://www.blenderguru.com/videos/introduction-to-camera-tracking/ 2. copy attached "Camera.blend" file to the same location where "Source Video.mp4" is. 3. open that blend file 4. press [ctrl]+T, to Track selected markers. 5. **while tracking is in progress**: File > Open Recent... > "Camera.blend" blender crash. [Camera.blend](https://archive.blender.org/developer/F83663/Camera.blend) [Camera.crash.txt](https://archive.blender.org/developer/F83664/Camera.crash.txt) [gdb-log.txt](https://archive.blender.org/developer/F83665/gdb-log.txt) (includes backtrace)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @beta-tester

Added subscriber: @beta-tester
Sergey Sharybin self-assigned this 2014-04-01 14:38:24 +02:00

This issue was referenced by blender/blender-addons-contrib@e21a7b32f9

This issue was referenced by blender/blender-addons-contrib@e21a7b32f9d54dcf1091ce02989921566c02f80f

This issue was referenced by e21a7b32f9

This issue was referenced by e21a7b32f9d54dcf1091ce02989921566c02f80f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit e21a7b32f9.

Closed by commit e21a7b32f9.
Sign in to join this conversation.
3 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#39546
No description provided.