Fix T39546: blender crash on open recent file, when tracking is still in progress